--- a/dialog.ui
+++ b/dialog.ui
@@ -2555,6 +2555,16 @@ QPushButton:checked{
     <string>Processed</string>
    </property>
   </widget>
+  <widget class="QTextEdit" name="textEdit">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>550</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
