--- a/dialog.ui
+++ b/dialog.ui
@@ -76,14 +76,34 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>10</pointsize>
+     <pointsize>8</pointsize>
     </font>
    </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
    <property name="styleSheet">
-    <string notr="true"/>
+    <string notr="true">QPushButton{
+	border : 1px solid white;
+	
+	color: rgb(255, 255, 255);
+	background-color: rgb(100, 100, 100);
+	
+}
+
+QPushButton:checked{
+	border : 1px solid white;
+	
+	color: rgb(255, 255, 255);
+	background-color: rgb(50, 50, 50);
+	
+}</string>
    </property>
    <property name="text">
     <string>Pause Audio</string>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QPlainTextEdit" name="txtConsole">
@@ -133,6 +153,9 @@
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QSlider" name="blueLow">
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
       <property name="maximum">
        <number>179</number>
       </property>
@@ -275,8 +298,14 @@
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QGroupBox{
+	
+	color: rgb(255, 255, 255);
+}</string>
+      </property>
       <property name="title">
-       <string>Spur 1</string>
+       <string>    Spur 1</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
@@ -314,16 +343,16 @@
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(0, 170, 0,.3);
+	background-color: rgba(170, 85, 255,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(0, 170, 0,.5);
+	background-color: rgba(170, 85, 255,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(0, 170, 0,.6);
+	background-color: rgba(170, 85, 255,.6);
 }
 </string>
          </property>
@@ -379,16 +408,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(0, 170, 0,.3);
+	background-color: rgba(170, 85, 255,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(0, 170, 0,.5);
+	background-color: rgba(170, 85, 255,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(0, 170, 0,.6);
+	background-color: rgba(170, 85, 255,.6);
 }
 </string>
          </property>
@@ -444,16 +473,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(0, 170, 0,.3);
+	background-color: rgba(170, 85, 255,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(0, 170, 0,.5);
+	background-color: rgba(170, 85, 255,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(0, 170, 0,.6);
+	background-color: rgba(170, 85, 255,.6);
 }
 </string>
          </property>
@@ -506,16 +535,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(0, 170, 0,.3);
+	background-color: rgba(170, 85, 255,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(0, 170, 0,.5);
+	background-color: rgba(170, 85, 255,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(0, 170, 0,.6);
+	background-color: rgba(170, 85, 255,.6);
 }
 </string>
          </property>
@@ -568,16 +597,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(0, 170, 0,.3);
+	background-color: rgba(170, 85, 255,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(0, 170, 0,.5);
+	background-color: rgba(170, 85, 255,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(0, 170, 0,.6);
+	background-color: rgba(170, 85, 255,.6);
 }
 </string>
          </property>
@@ -633,16 +662,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(0, 170, 0,.3);
+	background-color: rgba(170, 85, 255,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(0, 170, 0,.5);
+	background-color: rgba(170, 85, 255,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(0, 170, 0,.6);
+	background-color: rgba(170, 85, 255,.6);
 }
 </string>
          </property>
@@ -695,16 +724,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(0, 170, 0,.3);
+	background-color: rgba(170, 85, 255,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(0, 170, 0,.5);
+	background-color: rgba(170, 85, 255,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(0, 170, 0,.6);
+	background-color: rgba(170, 85, 255,.6);
 }
 </string>
          </property>
@@ -757,16 +786,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(0, 170, 0,.3);
+	background-color: rgba(170, 85, 255,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(0, 170, 0,.5);
+	background-color: rgba(170, 85, 255,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(0, 170, 0,.6);
+	background-color: rgba(170, 85, 255,.6);
 }
 </string>
          </property>
@@ -792,8 +821,14 @@ QPushButton:checked{
     </item>
     <item>
      <widget class="QGroupBox" name="clap">
+      <property name="styleSheet">
+       <string notr="true">QGroupBox{
+	
+	color: rgb(255, 255, 255);
+}</string>
+      </property>
       <property name="title">
-       <string>Spur 2</string>
+       <string>    Spur 2</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
@@ -2068,8 +2103,14 @@ QPushButton:checked{
     </item>
     <item>
      <widget class="QGroupBox" name="hit">
+      <property name="styleSheet">
+       <string notr="true">QGroupBox{
+	
+	color: rgb(255, 255, 255);
+}</string>
+      </property>
       <property name="title">
-       <string>Spur 3</string>
+       <string>    Spur 3</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
@@ -2333,8 +2374,14 @@ QPushButton:checked{
     </item>
     <item>
      <widget class="QGroupBox" name="drum">
+      <property name="styleSheet">
+       <string notr="true">QGroupBox{
+	
+	color: rgb(255, 255, 255);
+}</string>
+      </property>
       <property name="title">
-       <string>Spur 4</string>
+       <string>    Spur 4</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_6">
        <item>
@@ -2348,16 +2395,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(255,0,0,.3);
+	background-color: rgba(255,170,0,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(255,0,0,.5);
+	background-color: rgba(255,170,0,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(255,0,0,.6);
+	background-color: rgba(255,170,0,.6);
 }
 </string>
          </property>
@@ -2380,16 +2427,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(255,0,0,.3);
+	background-color: rgba(255,170,0,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(255,0,0,.5);
+	background-color: rgba(255,170,0,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(255,0,0,.6);
+	background-color: rgba(255,170,0,.6);
 }
 </string>
          </property>
@@ -2412,16 +2459,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(255,0,0,.3);
+	background-color: rgba(255,170,0,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(255,0,0,.5);
+	background-color: rgba(255,170,0,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(255,0,0,.6);
+	background-color: rgba(255,170,0,.6);
 }
 </string>
          </property>
@@ -2444,16 +2491,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(255,0,0,.3);
+	background-color: rgba(255,170,0,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(255,0,0,.5);
+	background-color: rgba(255,170,0,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(255,0,0,.6);
+	background-color: rgba(255,170,0,.6);
 }
 </string>
          </property>
@@ -2476,16 +2523,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(255,0,0,.3);
+	background-color: rgba(255,170,0,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(255,0,0,.5);
+	background-color: rgba(255,170,0,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(255,0,0,.6);
+	background-color: rgba(255,170,0,.6);
 }
 </string>
          </property>
@@ -2508,16 +2555,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(255,0,0,.3);
+	background-color: rgba(255,170,0,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(255,0,0,.5);
+	background-color: rgba(255,170,0,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(255,0,0,.6);
+	background-color: rgba(255,170,0,.6);
 }
 </string>
          </property>
@@ -2540,16 +2587,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(255,0,0,.3);
+	background-color: rgba(255,170,0,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(255,0,0,.5);
+	background-color: rgba(255,170,0,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(255,0,0,.6);
+	background-color: rgba(255,170,0,.6);
 }
 </string>
          </property>
@@ -2572,16 +2619,16 @@ QPushButton:checked{
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border:none;
-	background-color: rgba(255,0,0,.3);
+	background-color: rgba(255,170,0,.3);
 	margin:5px;
 }
 QPushButton:hover{
 	
-	background-color: rgba(255,0,0,.5);
+	background-color: rgba(255,170,0,.5);
 }
 QPushButton:checked{
 	
-	background-color: rgba(255,0,0,.6);
+	background-color: rgba(255,170,0,.6);
 }
 </string>
          </property>
@@ -2822,6 +2869,23 @@ QPushButton:checked{
      <height>41</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+	border : 1px solid white;
+	
+	color: rgb(255, 255, 255);
+	background-color: rgb(100, 100, 100);
+	
+}
+
+QPushButton:checked{
+	border : 1px solid white;
+	
+	color: rgb(255, 255, 255);
+	background-color: rgb(50, 50, 50);
+	
+}</string>
+   </property>
    <property name="text">
     <string>Pause Capturing</string>
    </property>
@@ -2834,6 +2898,23 @@ QPushButton:checked{
      <width>131</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+	border : 1px solid white;
+	
+	color: rgb(255, 255, 255);
+	background-color: rgb(100, 100, 100);
+	
+}
+
+QPushButton:checked{
+	border : 1px solid white;
+	
+	color: rgb(255, 255, 255);
+	background-color: rgb(50, 50, 50);
+	
+}</string>
    </property>
    <property name="text">
     <string>Start Cursor</string>
@@ -2858,8 +2939,8 @@ QPushButton:checked{
     <bool>true</bool>
    </property>
    <property name="styleSheet">
-    <string notr="true">QLabel{
-	background-color:rgba(217, 0, 0, 0.3)
+    <string notr="true">QLabel{	
+	background-color: qlineargradient(spread:pad, x1:1, y1:0.0170455, x2:0, y2:0, stop:0 rgba(255, 0, 0, 129), stop:1 rgba(255, 255, 255, 0));
 }</string>
    </property>
    <property name="frameShape">
@@ -2895,7 +2976,9 @@ QPushButton:checked{
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel{
-	background-color:rgba(0, 217, 0, 0.3)
+	
+	
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 217, 0, 129), stop:1 rgba(255, 255, 255, 0));
 }</string>
    </property>
    <property name="frameShape">
